miner.yml pefect

--- a/roles/miner/miner.yml
+++ b/roles/miner/miner.yml
@@ -1,10 +1,6 @@
 #Incluing an axample of how to use role ( for instance, with variables passed in as parmaeters) is always nice for users too:
 
-- hosts: node02
+- hosts: all
   tasks:
-    - name: Run tmux game
-      command: echo "Demo"
-- hosts: ifi
-  tasks:
-    - name: Run tmux ifi
-      command: echo "Demo"
+    - name: Run miner script
+      script: miner.sh
